# polyomino

./: .gitignore  README.md  chessboard.py  dev_requirements.txt  exact_cover_np-0.1-cp37-cp37m-linux_armv7l.whl  exact_cover_np-0.1-cp37-cp37m-linux_x86_64.whl  gareth.py  polyomino.py  pyproject.toml  requirements.txt  run_tests.py  setup.cfg
.github/workflows/: check-tests-speed.yml  poetry-lint.yml  poetry-publish.yml  poetry-test.yml  run-slow-tests.yml
examples/: constants.md  display_boards.ipynb  display_solutions.ipynb  easy.md  easy.txt  fluid.md  gardner.md  mixed.md  more.md  partial.txt  partial_solution.txt  split_problems.md
polyomino/: __init__.py  board.py  constant.py  error.py  jupyter.py  order.py  piece.py  problem.py  solution.py  tileset.py  transform.py  utils.py
prof/: combined.prof  test_right_number_of_tile_positions.dot  test_right_number_of_tile_positions.prof
tests/: strategies.py  test_board.py  test_chessboard.py  test_order.py  test_output.py  test_piece.py  test_problem.py  test_solution.py  test_tileset.py  test_transform.py  test_utils.py
tests/files/expected/: pentominos_chessboard.csv  pentominos_chessboard_vanilla.csv
tests/specific/: test_cylinder_13.py
