[tool.poetry]
name = "polyomino"
version = "0.2.0-alpha.0"
description = "Solve polyomino tiling problems."
authors = ["Jack Grahl <jack.grahl@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
exact-cover = "0.4.0a0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[tool.poetry.scripts]
test = 'build:run_tests'
doctest = 'build:run_doctests'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
