[tool.poetry]
name = "polyomino"
version = "0.4.3-alpha.1"
description = "Solve polyomino tiling problems."
readme = "README.md"
authors = ["Jack Grahl <jack.grahl@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
exact-cover = "0.4.3"
numpy = "^1.20"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
hypothesis = "^6.0.2"

[tool.poetry.scripts]
test = 'run_tests:run_tests'
doctest = 'run_tests:run_doctests'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
